Initial skeleton styling

--- a/index.html
+++ b/index.html
@@ -16,15 +16,25 @@
       <div class="book-input">
         <h2>Input Book Items</h2>
         <form action="#" class="book-input-details">
-          <label for="title">Title</label>
-          <input type="text" id="title" name="title" />
+          <div class="input-card input-title">
+            <label for="title">Title</label>
+            <input type="text" id="title" name="title" />
+          </div>
 
-          <label for="author">Author</label>
-          <input type="text" id="author" name="author" />
+          <div class="input-card input-author">
+            <label for="author">Author</label>
+            <input type="text" id="author" name="author" />
+          </div>
 
-          <label for="pages">Pages</label>
-          <input type="number" id="pages" name="pages" />
+          <div class="input-card input-pages">
+            <label for="pages">Pages</label>
+            <input type="number" id="pages" name="pages" />
+          </div>
         </form>
+      </div>
+
+      <div class="book-list">
+        <h2>Your Library</h2>
       </div>
     </main>
 
