Menangkap user input dan merubahnya menjadi object constructor lalu menyimpannya ke dalam array

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
             <label for="pages">Pages</label>
             <input type="number" id="pages" name="pages" />
           </div>
+
+          <input type="submit" value="Submit" onclick="addBookToLibrary()">
         </form>
       </div>
 
