Menampilkan buku yang sudah dimasukan oleh user

--- a/index.html
+++ b/index.html
@@ -31,12 +31,16 @@
             <input type="number" id="pages" name="pages" />
           </div>
 
-          <input type="submit" value="Submit" onclick="addBookToLibrary()">
+          <input type="submit" value="Submit" onclick="addBookToLibrary()" />
         </form>
       </div>
 
       <div class="book-list">
         <h2>Your Library</h2>
+
+        <div id="library">
+          <!-- buku yang sudah diinput akan ditampilkan di sini -->
+        </div>
       </div>
     </main>
 
