--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Book Library</title>
     <link rel="stylesheet" href="./style.css" />
+    <link rel="shortcut icon" href="images/library-svgrepo-com.svg" type="image/x-icon">
   </head>
   <body>
     <nav>
