--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <input type="number" id="pages" name="pages" />
           </div>
 
-          <input type="submit" value="Submit" onclick="addBookToLibrary()" />
+          <input id="button" type="submit" value="Submit" onclick="addBookToLibrary()" />
         </form>
       </div>
 
