Styling delete button

--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
             <input type="number" id="pages" name="pages" />
           </div>
 
-          <input id="button" type="submit" value="Submit" onclick="addBookToLibrary()" />
+          <input
+            id="button"
+            type="submit"
+            value="Submit"
+            onclick="addBookToLibrary()"
+          />
         </form>
       </div>
 
